<package>
  <name>dynamic_graph_bridge_msgs</name>
  <version>0.3.0</version>
  <description>
    Dynamic graph bridge messages and services.
  </description>
  <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>
  <author>Pierre Gergondet</author>

  <license>BSD</license>
  <url>https://ros.org/wiki/dynamic_graph_bridge_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
