<package format="3">
  <name>dynamic_graph_bridge_msgs</name>
  <version>0.3.1</version>
  <description>
    Dynamic graph bridge messages and services.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Pierre Gergondet</author>

  <license>BSD</license>
  <url>https://ros.org/wiki/dynamic_graph_bridge_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
