<package format="3">
  <name>dynamic_graph_bridge_msgs</name>
  <version>0.3.1</version>
  <description>
    Dynamic graph bridge messages and services.
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <author>Pierre Gergondet</author>

  <license>BSD</license>
  <url>https://ros.org/wiki/dynamic_graph_bridge_msgs</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>

  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">roscpp</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group condition="$ROS_VERSION == 2">rosidl_interface_packages</member_of_group>

  <test_depend condition="$ROS_VERSION == 1">rospy</test_depend>  
  <test_depend condition="$ROS_VERSION == 2">rclpy</test_depend>  

  <export>
    <rosdoc config="rosdoc.yaml" />
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
